<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="app_name">地震</string>
    <string name="quake_feed">
        http://earthquake.usgs.gov/eqcenter/catalogs/1day-M2.5.xml
    </string>
    <!-- http://8.254.0.124/eqcenter/catalogs/1day-M2.5.xml -->
    <string name="menu_update">刷新地震</string>
    <string name="dialog_status">状态</string>
    <string name="add_earthquake_format">正在添加第%d条数据</string>
    <string name="updating_earthquake">正在更新地震数据</string>
    <string name="updating_earthquake_finished">地震数据已经刷新完毕</string>
    
    <string name="view_date">时间</string>
    <string name="view_details">详情</string>
    <string name="view_longitude">经度</string>
    <string name="view_latitude">纬度</string>
    <string name="view_magnitude">震级</string>
    <string name="exit">退出 </string>
    <string name="exit_confirm">确认退出吗?</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    
    <string name="dialog_detail_title">地震详情</string>
    <string name="boot_completed">系统启动完成</string>

</resources>