<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView android:id="@+id/view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_date"
        android:layout_alignParentTop="true"/>
    <TextView android:id="@+id/view_magnitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:text="@string/view_magnitude"/>
    <TextView android:id="@+id/view_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_date"
        android:text="@string/view_details"/>
    <TextView android:id="@+id/view_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view_details"
        android:text="@string/view_longitude"/>
    <TextView android:id="@+id/view_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/view_details"
        android:text="@string/view_latitude"/>

</RelativeLayout>